syntax = "proto3";

package metrics;

option go_package = "metrics/proto";

message Metric {
  string name = 1; // имя метрики
  string type = 2; // тип метрики gauge или counter
  double value = 3; // значение gauge метрики 
  sint64 delta = 4; // значение counter метрики
}

message UpdateMetricsRequest {
  repeated Metric metrics = 1; // список метрик
}

message UpdateMetricsResponse {
  string error = 1;
}

service Metrics {
  rpc UpdateMetrics(UpdateMetricsRequest) returns (UpdateMetricsResponse);
}